<resources>
    <string name="app_name">CONTACTO</string>
    <string name="Nombre">Nombre Completo</string>
    <string name="Fecha">Fecha de Nacimiento</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="Descripcion">Descripcion Contacto</string>
    <string name="next">Siguiente</string>
    <string name="txtcheckData">Check Data</string>
    <string name="maxLength">50</string>
    </resources>