<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingRight="@dimen/paddingRight"
        android:paddingLeft="@dimen/paddingRight"
        android:maxLength="50"
        android:hint="@string/Nombre"
        android:id="@+id/edtNombre"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingRight="@dimen/paddingRight"
        android:paddingLeft="@dimen/paddingLeft"
        android:hint="@string/Fecha"
        android:id="@+id/edtFecha"
        android:maxLines="1"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingRight="@dimen/paddingRight"
        android:paddingLeft="@dimen/paddingLeft"
        android:maxLength="10"
        android:hint="@string/telefono"
        android:id="@+id/edtTelefono"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingRight="@dimen/paddingRight"
        android:paddingLeft="@dimen/paddingLeft"
        android:hint="@string/email"
        android:id="@+id/edtEmail"
        android:maxLines="1"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingRight="@dimen/paddingRight"
        android:paddingLeft="@dimen/paddingLeft"
        android:hint="@string/Descripcion"
        android:id="@+id/edtDescripcion"
        android:maxLines="1"/>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/btnNext"
            android:text="@string/next"
            android:onClick="goCheckData"
            android:layout_gravity="bottom"/>

</LinearLayout>

</LinearLayout>